--- a/qcom/Makefile
+++ b/qcom/Makefile
@@ -93,7 +93,7 @@ kalama-dtb-$(CONFIG_ARCH_CROW) += \
 kalama-overlays-dtb-$(CONFIG_ARCH_CROW) += $(CROW_BOARDS) $(CROW_BASE_DTB)
 dtb-y += $(kalama-dtb-y)
 
-KHAJE_BASE_DTB += khaje.dtb khajep.dtb khajeq.dtb khajeg.dtb
+KHAJE_BASE_DTB += khaje.dtb khajep.dtb khajeq.dtb khajeg.dtb khaje-3gb.dtb
 
 KHAJE_BOARDS += \
                  khaje-idp-overlay.dtbo \
