--- a/qcom/trinket-thermal.dtsi
+++ b/qcom/trinket-thermal.dtsi
@@ -899,5 +899,245 @@
 			};
 		};
 	};
+
+	quiet-therm {
+		polling-delay-passive = <2000>;
+		polling-delay = <0>;
+		thermal-sensors = <&pm6125_adc_tm 1>;
+		trips {
+			thermal-engine-config {
+				temperature = <125000>;
+				hysteresis = <1000>;
+				type = "passive";
+			};
+
+			batt_trip0: batt-trip0 {
+				temperature = <45000>;
+				hysteresis = <2000>;
+				type = "passive";
+			};
+
+			gold_trip: gold-trip {
+				temperature = <46000>;
+				hysteresis = <0>;
+				type = "passive";
+			};
+
+			modem_trip0: modem-trip0 {
+				temperature = <46000>;
+				hysteresis = <4000>;
+				type = "passive";
+			};
+
+			batt_trip1: batt-trip1 {
+				temperature = <47000>;
+				hysteresis = <2000>;
+				type = "passive";
+			};
+
+			modem_trip1: modem-trip1 {
+				temperature = <48000>;
+				hysteresis = <2000>;
+				type = "passive";
+			};
+
+			skin_gpu_trip: skin-gpu-trip {
+				temperature = <48000>;
+				hysteresis = <0>;
+				type = "passive";
+			};
+
+			batt_trip2: batt-trip2 {
+				temperature = <49000>;
+				hysteresis = <2000>;
+				type = "passive";
+			};
+
+			modem_trip2: modem-trip2 {
+				temperature = <50000>;
+				hysteresis = <2000>;
+				type = "passive";
+			};
+
+			batt_trip3: batt-trip3 {
+				temperature = <51000>;
+				hysteresis = <2000>;
+				type = "passive";
+			};
+
+			silver_trip: silver-trip {
+				temperature = <52000>;
+				hysteresis = <0>;
+				type = "passive";
+			};
+
+			cx_emer_trip: cx-emer-trip {
+				temperature = <52000>;
+				hysteresis = <4000>;
+				type = "passive";
+			};
+		};
+
+		cooling-maps {
+			skin_cpu4 {
+				trip = <&gold_trip>;
+				cooling-device =
+					/* throttle from fmax to 1401600KHz */
+					<&CPU4 0 3>;
+			};
+
+			skin_cpu5 {
+				trip = <&gold_trip>;
+				cooling-device = <&CPU5 0 3>;
+			};
+
+			skin_cpu6 {
+				trip = <&gold_trip>;
+				cooling-device = <&CPU6 0 3>;
+			};
+
+			skin_cpu7 {
+				trip = <&gold_trip>;
+				cooling-device = <&CPU7 0 3>;
+			};
+
+			skin_cpu0 {
+				trip = <&silver_trip>;
+				/* throttle from fmax to 1420800KHz */
+				cooling-device = <&CPU0 0 2>;
+			};
+
+			skin_cpu1 {
+				trip = <&silver_trip>;
+				cooling-device = <&CPU1 0 2>;
+			};
+
+			skin_cpu2 {
+				trip = <&silver_trip>;
+				cooling-device = <&CPU2 0 2>;
+			};
+
+			skin_cpu3 {
+				trip = <&silver_trip>;
+				cooling-device = <&CPU3 0 2>;
+			};
+
+			modem_lvl1 {
+				trip = <&modem_trip1>;
+				cooling-device = <&modem_pa 1 1>;
+			};
+
+			modem_lvl2 {
+				trip = <&modem_trip2>;
+				cooling-device = <&modem_pa 2 2>;
+			};
+
+			modem_lvl3 {
+				trip = <&cx_emer_trip>;
+				cooling-device = <&modem_pa 3 3>;
+			};
+
+			modem_proc_lvl1 {
+				trip = <&modem_trip0>;
+				cooling-device = <&modem_proc 1 1>;
+			};
+
+			modem_proc_lvl3 {
+				trip = <&cx_emer_trip>;
+				cooling-device = <&modem_proc 3 3>;
+			};
+
+			battery_lvl0 {
+				trip = <&batt_trip0>;
+				cooling-device = <&pmi632_charger 1 1>;
+			};
+
+			battery_lvl1 {
+				trip = <&batt_trip1>;
+				cooling-device = <&pmi632_charger 2 2>;
+			};
+
+			battery_lvl2 {
+				trip = <&batt_trip2>;
+				cooling-device = <&pmi632_charger 4 4>;
+			};
+
+			battery_lvl3 {
+				trip = <&batt_trip3>;
+				cooling-device = <&pmi632_charger 5 5>;
+			};
+		};
+	};
+
+	xo-therm {
+		polling-delay-passive = <0>;
+		polling-delay = <0>;
+		thermal-sensors = <&pm6125_adc_tm 2>;
+		trips {
+			active-config0 {
+				temperature = <125000>;
+				hysteresis = <1000>;
+				type = "passive";
+			};
+
+			active-config1 {
+				temperature = <125000>;
+				hysteresis = <1000>;
+				type = "passive";
+			};
+		};
+	};
+
+	conn-therm {
+		polling-delay-passive = <0>;
+		polling-delay = <0>;
+		thermal-sensors = <&pmi632_adc_tm 0>;
+		trips {
+			active-config0 {
+				temperature = <125000>;
+				hysteresis = <1000>;
+				type = "passive";
+			};
+		};
+	};
+
+	skin-therm {
+		polling-delay-passive = <0>;
+		polling-delay = <0>;
+		thermal-sensors = <&pmi632_adc_tm 2>;
+		trips {
+			active-config0 {
+				temperature = <125000>;
+				hysteresis = <1000>;
+				type = "passive";
+			};
+		};
+	};
+
+	camera-ftherm {
+		polling-delay-passive = <0>;
+		polling-delay = <5000>;
+		thermal-sensors = <&pm6125_adc_tm_iio 0>;
+		trips {
+			active-config0 {
+				temperature = <125000>;
+				hysteresis = <1000>;
+				type = "passive";
+			};
+		};
+	};
+
+	emmc-ufs-therm-adc {
+		polling-delay-passive = <0>;
+		polling-delay = <5000>;
+		thermal-sensors = <&pm6125_adc_tm_iio 1>;
+		trips {
+			active-config0 {
+				temperature = <125000>;
+				hysteresis = <1000>;
+				type = "passive";
+			};
+		};
+	};
 };
 
