--- a/qcom/kalamap-rb5-gen2.dtsi
+++ b/qcom/kalamap-rb5-gen2.dtsi
@@ -446,12 +446,48 @@
 	periph-d46-supply = <&L7N>;
 };
 
+&qupv3_hub_i2c4 {
+	status = "ok";
+
+	pcie_i2c_ctrl: pcie_i2c_ctrl {
+		compatible = "qcom,pcie0-i2c-ntn3";
+		reg = <0x77>;
+		gpio-config-reg = <0x801208>;
+		ep-reset-reg = <0x801210>;
+		ep-reset-gpio-mask = <0xc>;
+		version-reg = <0x800000>;
+		dump-regs = <0x801330 0x801350 0x801370>;
+		reg_update = <0x82c030 0x1
+					0x828000 0x3
+					0x82bd00 0x8
+					0x82c030 0x2
+					0x828000 0x3
+					0x82bd00 0x8
+					0x82c030 0x8
+					0x828000 0x1
+					0x82bd00 0x8
+					0x82c01c 0x10
+					0x82c030 0xf
+					0x828000 0xf
+					0x82b268 0x2>;
+		/*FOM for preset caluclation*/
+		switch_reg_update = <0x82c02c 0x00000007
+					0x824a10 0x00000001
+					0x82c030 0x00000008
+					0x828000 0x00000001
+					0x82b074 0x00000020
+					0x82b2bc 0x00000001>;
+	};
+};
+
 &pcie0 {
 	qcom,boot-option = <0x2>;
 
 	pcie-usb-hub-power-1p05-gpio = <&tlmm 179 0>;
 	pcie-usb-hub-power-3p3-gpio = <&tlmm 13 0>;
 	pcie-usb-hub-ponreset-gpio = <&tlmm 182 0>;
+
+	 pcie-i2c-phandle = <&qupv3_hub_i2c4>;
 
 	 qcom,pcie-phy-ver = <102>;
 			qcom,phy-sequence = <0x0240 0x03 0x0
@@ -569,6 +605,40 @@
 					0x0200 0x00 0x0
 					0x0244 0x03 0x0>;
 
+	iommu-map = <0x0 &apps_smmu 0x0200 0x1>,
+		<0x100 &apps_smmu 0x0201 0x1>,
+		<0x208 &apps_smmu 0x0202 0x1>,
+		<0x210 &apps_smmu 0x0203 0x1>,
+		<0x218 &apps_smmu 0x0204 0x1>,
+		<0x300 &apps_smmu 0x0207 0x1>,
+		<0x400 &apps_smmu 0x0208 0x1>,
+		<0x500 &apps_smmu 0x020c 0x1>,
+		<0x501 &apps_smmu 0x020e 0x1>;
+};
+
+&pcie0_rp {
+	#address-cells = <5>;
+	#size-cells = <0>;
+
+	/* BDF 1.0.0 */
+	pcie0_bus1_dev0_fn0: pcie0_bus1_dev0_fn0 {
+		reg = <0 0 0 0 0>;
+
+		/* BDF 2.1.0 */
+		pcie0_bus2_dev1_fn0: pcie0_bus2_dev1_fn0 {
+			reg = <0x800 0x0 0x0 0x0 0x0>;
+		};
+
+		/* BDF 2.2.0 */
+		pcie0_bus2_dev2_fn0: pcie0_bus2_dev2_fn0 {
+			reg = <0x1000 0x0 0x0 0x0 0x0>;
+		};
+
+		/* BDF 2.3.0 */
+		pcie0_bus2_dev3_fn0: pcie0_bus2_dev3_fn0 {
+			reg = <0x1800 0x0 0x0 0x0 0x0>;
+		};
+	};
 };
 
 &pcie1 {
