ARM: dts: msm: Make fastrpc modem memory as un-cached
Make fastrpc modem memory as un-cached to avoid cache
coherence problem.

Change-Id: I1ebdda6fefa42d504f093aa5aabc17f9912bbf91

--- a/qcom/sm8150-dma-heaps.dtsi
+++ b/qcom/sm8150-dma-heaps.dtsi
@@ -55,5 +55,11 @@
 			memory-region = <&audio_cma_mem>;
 		};
 
+		qcom,mdsp {
+			qcom,dma-heap-name = "qcom,mdsp";
+			qcom,dma-heap-type = <HEAP_TYPE_CMA>;
+			memory-region = <&mdsp_mem>;
+			qcom,uncached-heap;
+		};
 	};
 };
