ARM: dts: msm: add dt entry for rf_clk2 clock
Add devicetree entry for rf_clk2 clock.

Change-Id: I220173d48c75955d9d8a47da26ecdfc17f4c4c23

--- a/qcom/slate.dtsi
+++ b/qcom/slate.dtsi
@@ -26,6 +26,9 @@
 		qcom,rproc-handle = <&aon_pas>;
 		/* GPIO for external flash */
 		qcom,platform-reset-gpio = <&pm5100_gpios 15 0>;
+		clocks = <&rpmcc RPM_SMD_RF_CLK2>;
+		clock-names = "rf_clk2";
+		status = "ok";
 	};
 
 	glink_slatecom:qcom,glink-slatecom-xprt-slate {
