--- a/qcom/lemans.dtsi
+++ b/qcom/lemans.dtsi
@@ -25,7 +25,7 @@
 	reserved_memory: reserved-memory { };
 
 	chosen: chosen {
-		bootargs = "qcom_dma_heaps.enable_bitstream_contig_heap=y kpti=0";
+		bootargs = "qcom_dma_heaps.enable_bitstream_contig_heap=y kpti=0 cpufreq.default_governor=performance";
 	};
 
 	aliases {
