ARM: dts: msm: Add flag in device tree to reduce ipc log pages in sdxbaagha
Reduce the memory allocated for MHI ipc logging by half.
This is needed for sdxbaagha as its a low memory SoC.

Change-Id: Ie9ba7b53157195ebd1c90bd79782e16d9fef1e83

--- a/qcom/sdxbaagha.dtsi
+++ b/qcom/sdxbaagha.dtsi
@@ -762,6 +762,7 @@
 		qcom,mhi-interrupt;
 		qcom,no-m0-timeout;
 		dummy-supply = <&pcie_ep>;
+		qcom,mhi-num-ipc-pages-dev-fac = <2>;
 
 		status = "disabled";
 	};
