--- a/qcom/lemans-gunyah-vm.dtsi
+++ b/qcom/lemans-gunyah-vm.dtsi
@@ -144,10 +144,12 @@
 		/* QUPv3 Tile 1 read-only region */
 		/* QUPv3 Tile 2 read-only region */
 		/* QUPv3 SE17 region */
+		/* QRNG region */
 		iomemory-ranges = <0x0 0xF000000 0x0 0xF000000 0x0 0x1000000 0x0
 				0x0 0xAC0000 0x0 0xAC0000 0x0 0x6000 0x1
 				0x0 0x8C0000 0x0 0x8C0000 0x0 0x6000 0x1
 				0x0 0x88C000 0x0 0x88C000 0x0 0x4000 0x0
+				0x0 0x10dc000 0x0 0x10dc000 0x0 0x1000 0x0
 				>;
 
 		/* Pass through IRQs */
