--- a/qcom/kalamap-rb5-gen2.dtsi
+++ b/qcom/kalamap-rb5-gen2.dtsi
@@ -30,6 +30,27 @@
 };
 
 &soc {
+
+	qps615_bridge0_vreg: qps615_bridge0_vreg {
+		compatible = "regulator-fixed";
+		regulator-name = "qps615_bridge0_vreg";
+		gpio = <&tlmm 67 GPIO_ACTIVE_HIGH>;
+		regulator-min-microvolt = <1000000>;
+		regulator-max-microvolt = <1000000>;
+		enable-active-high;
+		regulator-enable-ramp-delay = <4300>;
+	};
+
+	qps615_bridge1_vreg: qps615_bridge1_vreg {
+		compatible = "regulator-fixed";
+		regulator-name = "qps615_bridge1_vreg";
+		gpio = <&tlmm 42 GPIO_ACTIVE_HIGH>;
+		regulator-min-microvolt = <1000000>;
+		regulator-max-microvolt = <1000000>;
+		enable-active-high;
+		regulator-enable-ramp-delay = <4300>;
+	};
+
 	gpio_key {
 		compatible = "gpio-keys";
 		label = "gpio-keys";
@@ -488,7 +509,8 @@
 	pcie-usb-hub-power-3p3-gpio = <&tlmm 13 0>;
 	pcie-usb-hub-ponreset-gpio = <&tlmm 182 0>;
 
-	 pcie-i2c-phandle = <&qupv3_hub_i2c4>;
+	pcie-i2c-phandle = <&qupv3_hub_i2c4>;
+	vreg-3p3-supply = <&qps615_bridge0_vreg>;
 
 	 qcom,pcie-phy-ver = <102>;
 			qcom,phy-sequence = <0x0240 0x03 0x0
@@ -680,6 +702,7 @@
 &pcie1 {
 	pcie-i2c-phandle = <&qupv3_hub_i2c3>;
 	qcom,boot-option = <0x2>;
+	vreg-3p3-supply = <&qps615_bridge1_vreg>;
 	qcom,apss-based-l1ss-sleep;
 
 	iommu-map = <0x0 &apps_smmu 0x1480 0x1>,
