ARM: dts: msm: updating pcie_i2c_ctrl property node string
DTSI compilation is failing if same property name "pcie_i2c_ctrl"
used in qup i2c node for pcie instance 0 & 1. Modifying this
property name to fix compilation issue and for better readabilty
by using the rc idx value in the pcie_i2c_ctrl node string name.
For exa: for pcie instance 0, this node string will become
"pcie0_i2c_ctrl" and for pcie instance 1, this node string
will be "pcie1_i2c_ctrl".

Change-Id: If22da397c09a2cc7fcee47ac03038d0214a11346

--- a/qcom/kalamap-rb5-gen2.dtsi
+++ b/qcom/kalamap-rb5-gen2.dtsi
@@ -449,7 +449,7 @@
 &qupv3_hub_i2c4 {
 	status = "ok";
 
-	pcie_i2c_ctrl: pcie_i2c_ctrl {
+	pcie0_i2c_ctrl: pcie0_i2c_ctrl {
 		compatible = "qcom,pcie-i2c-ntn3";
 		reg = <0x77>;
 		gpio-config-reg = <0x801208>;
@@ -644,7 +644,7 @@
 &qupv3_hub_i2c3 {
 	status = "ok";
 
-	pcie_i2c_ctrl0: pcie_i2c_ctrl0 {
+	pcie1_i2c_ctrl: pcie1_i2c_ctrl {
 		compatible = "qcom,pcie-i2c-ntn3";
 		reg = <0x77>;
 		gpio-config-reg = <0x801208>;
