ARM: dts: msm: Add scandump_sizes for gen3auto
Add scandump support and sizes parameters
under watchdog node for 8155 to enable scandump feature.

Change-Id: I0ee1c6aa47c9d417fceaecd1a3eacedf55192aec

--- a/qcom/sm8150.dtsi
+++ b/qcom/sm8150.dtsi
@@ -1477,6 +1477,9 @@
 		reg = <0x17c10000 0x1000>;
 		reg-names = "wdt-base";
 		interrupts = <GIC_SPI 0 IRQ_TYPE_LEVEL_HIGH>;
+		qcom,support-scandump;
+		qcom,scandump-sizes = <0x10100 0x10100 0x10100 0x10100
+					0x18100 0x18100 0x18100 0x18100>;
 	};
 
 	qcom,sps {
