ARM: dts: msm: updating compatible string for NTN3 switch
There are two NTN3 switches connected to PCIe0 & PCIe1.
This patch modifies the "compatible" string to common
string "qcom,pcie-i2c-ntn3" which will support both NTN3
switches connected to Root port 0 & 1.

Change-Id: I34a8b2b35908540ccf147f50ed86f9278c061763

--- a/qcom/kalamap-rb5-gen2.dtsi
+++ b/qcom/kalamap-rb5-gen2.dtsi
@@ -450,7 +450,7 @@
 	status = "ok";
 
 	pcie_i2c_ctrl: pcie_i2c_ctrl {
-		compatible = "qcom,pcie0-i2c-ntn3";
+		compatible = "qcom,pcie-i2c-ntn3";
 		reg = <0x77>;
 		gpio-config-reg = <0x801208>;
 		ep-reset-reg = <0x801210>;
@@ -645,7 +645,7 @@
 	status = "ok";
 
 	pcie_i2c_ctrl0: pcie_i2c_ctrl0 {
-		compatible = "qcom,pcie0-i2c-ntn3";
+		compatible = "qcom,pcie-i2c-ntn3";
 		reg = <0x77>;
 		gpio-config-reg = <0x801208>;
 		ep-reset-reg = <0x801210>;
