ARM: dts: msm: added rc-index property in "pcie_i2c_ctrl" node
Adding "rc-index" property into device tree node: "pcie_i2c_ctrl"
for each ntn3-pcie-i2c instance. This is required because of common
compatible string being used for all the ntn3-pcie-i2c instances.
This property will help to differentiate pcie i2c instances during
probe.

Change-Id: I597d8ec6511ae692bbd731b2240426ac44caeebd

--- a/qcom/kalamap-rb5-gen2.dtsi
+++ b/qcom/kalamap-rb5-gen2.dtsi
@@ -451,6 +451,7 @@
 
 	pcie0_i2c_ctrl: pcie0_i2c_ctrl {
 		compatible = "qcom,pcie-i2c-ntn3";
+		rc-index = <0x0>;
 		reg = <0x77>;
 		gpio-config-reg = <0x801208>;
 		ep-reset-reg = <0x801210>;
@@ -646,6 +647,7 @@
 
 	pcie1_i2c_ctrl: pcie1_i2c_ctrl {
 		compatible = "qcom,pcie-i2c-ntn3";
+		rc-index = <0x1>;
 		reg = <0x77>;
 		gpio-config-reg = <0x801208>;
 		ep-reset-reg = <0x801210>;
