--- a/qcom/lemans-gunyah-vm.dtsi
+++ b/qcom/lemans-gunyah-vm.dtsi
@@ -158,10 +158,9 @@
 			#address-cells = <0x2>;
 			#size-cells = <0x0>;
 			/*
-			 * IPA address linux image is loaded at.
-			 */
-			base-address = <0x0 0xE0000000 >;
-			size-min = <0x0 0xC0000000>;    /* 3 GB */
+			* The IPA of the Guest regions is placed as IPA=PA.
+			*/
+			is-direct;
 		};
 
 		segments {
@@ -202,7 +201,7 @@
 				memory {
 					qcom,label = <0x10>;			/* misc.img */
 					#address-cells = <0x2>;
-					base = <0x0 0xd5100000>;
+					allocate-base;
 				};
 			};
 
@@ -217,7 +216,7 @@
 				memory {
 					qcom,label = <0x11>;			/* persist.img */
 					#address-cells = <0x2>;
-					base = <0x0 0xd5104000>;
+					allocate-base;
 				};
 			};
 
@@ -232,7 +231,7 @@
 				memory {
 					qcom,label = <0x15>;			/* metadate.img */
 					#address-cells = <0x2>;
-					base = <0x0 0xd5108000>;
+					allocate-base;
 				};
 			};
 
@@ -247,7 +246,7 @@
 				memory {
 					qcom,label = <0x16>;			/* userdata.img */
 					#address-cells = <0x2>;
-					base = <0x0 0xd510c000>;
+					allocate-base;
 				};
 			};
 
@@ -262,7 +261,7 @@
 				memory {
 					qcom,label = <0x17>;			/* super.img */
 					#address-cells = <0x2>;
-					base = <0x0 0xd5110000>;
+					allocate-base;
 				};
 			};
 
@@ -277,7 +276,7 @@
 				memory {
 					qcom,label = <0x13>;			/* Net device */
 					#address-cells = <0x2>;
-					base = <0x0 0xd5114000>;
+					allocate-base;
 				};
 			};
 
@@ -292,7 +291,7 @@
 				memory {
 					qcom,label = <0x14>;			/* HAB device 0 */
 					#address-cells = <0x2>;
-					base = <0x0 0xd5120000>;
+					allocate-base;
 				};
 			};
 
@@ -307,7 +306,7 @@
 				memory {
 					qcom,label = <0x18>;			/* HAB device 1 */
 					#address-cells = <0x2>;
-					base = <0x0 0xd5140000>;
+					allocate-base;
 				};
 			};
 
@@ -322,7 +321,7 @@
 				memory {
 					qcom,label = <0x19>;			/* HAB device 2 */
 					#address-cells = <0x2>;
-					base = <0x0 0xd5160000>;
+					allocate-base;
 				};
 			};
 
@@ -337,7 +336,7 @@
 				memory {
 					qcom,label = <0x1a>;			/* HAB device 3 */
 					#address-cells = <0x2>;
-					base = <0x0 0xd51e0000>;
+					allocate-base;
 				};
 			};
 
@@ -352,7 +351,7 @@
 				memory {
 					qcom,label = <0x1b>;			/* HAB device 4 */
 					#address-cells = <0x2>;
-					base = <0x0 0xd5280000>;
+					allocate-base;
 				};
 			};
 
@@ -367,7 +366,7 @@
 				memory {
 					qcom,label = <0x1c>;			/* HAB device 5 */
 					#address-cells = <0x2>;
-					base = <0x0 0xd52e0000>;
+					allocate-base;
 				};
 			};
 
@@ -382,7 +381,7 @@
 				memory {
 					qcom,label = <0x1d>;			/* Input device */
 					#address-cells = <0x2>;
-					base = <0x0 0xd5340000>;
+					allocate-base;
 				};
 			};
 
@@ -397,7 +396,7 @@
 				memory {
 					qcom,label = <0x1e>;			/* SCMI device */
 					#address-cells = <0x2>;
-					base = <0x0 0xd5348000>;
+					allocate-base;
 				};
 			};
 
@@ -412,7 +411,7 @@
 				memory {
 					qcom,label = <0x1f>;		/* Reserved devices */
 					#address-cells = <0x2>;
-					base = <0x0 0xd5350000>;
+					allocate-base;
 				};
 			};
 
@@ -425,7 +424,7 @@
 				memory {
 					qcom,label = <0x12>;
 					#address-cells = <0x2>;
-					base = <0x0 0xd5400000>;
+					allocate-base;
 				};
 			};
 
@@ -450,7 +449,7 @@
 
 		android {
 			compatible = "android,firmware";
-			boot_devices = "20001000.virtio-mmio,20002000.virtio-mmio,20003000.virtio-mmio,20004000.virtio-mmio,20005000.virtio-mmio";
+			boot_devices = "70001000.virtio-mmio,70002000.virtio-mmio,70003000.virtio-mmio,70004000.virtio-mmio,70005000.virtio-mmio";
 
 			vbmeta {
 				compatible = "android,vbmeta";
