ARM: dts: msm: Update SMB1510 naming to match with HW name
Update SMB1510 naming to match with HW name.

Change-Id: I69948afc709e6925a180f1e744c35416538e928e

--- a/qcom/crow-pm7550ba.dtsi
+++ b/qcom/crow-pm7550ba.dtsi
@@ -110,8 +110,8 @@
 };
 
 &pm7550ba_bcl {
-	nvmem-cells = <&sm1510_present>;
-	nvmem-cell-names = "sm1510_present";
+	nvmem-cells = <&smb1510_present>;
+	nvmem-cell-names = "smb1510_present";
 };
 
 &thermal_zones {
