--- a/qcom/crow-pm8550b.dtsi
+++ b/qcom/crow-pm8550b.dtsi
@@ -37,8 +37,8 @@
 };
 
 &pm8550b_bcl {
-	nvmem-cells = <&sm1510_present>;
-	nvmem-cell-names = "sm1510_present";
+	nvmem-cells = <&smb1510_present>;
+	nvmem-cell-names = "smb1510_present";
 };
 
 &pmk8550_vadc {
