--- a/qcom/pmk8550.dtsi
+++ b/qcom/pmk8550.dtsi
@@ -42,7 +42,7 @@
 			#address-cells = <1>;
 			#size-cells = <1>;
 
-			sm1510_present: sm1510_present@5d {
+			smb1510_present: smb1510_present@5d {
 				reg = <0x5d 0x1>;
 				bits = <5 5>;
 			};
