--- a/qcom/Makefile
+++ b/qcom/Makefile
@@ -59,7 +59,8 @@ KALAMA_BOARDS += \
 		 kalama-sg-hhg-overlay.dtbo \
 		 kalamap-hdk-overlay.dtbo \
 		 kalamap-sg-hhg-overlay.dtbo \
-		 kalamap-rb5-gen2-overlay.dtbo
+		 kalamap-rb5-gen2-overlay.dtbo \
+		 kalamap-aim300-overlay.dtbo
 
 NOAPQ_KALAMA_BOARDS += \
 		 kalama-rumi-overlay.dtbo \
