--- a/qcom/qcs405.dtsi
+++ b/qcom/qcs405.dtsi
@@ -595,7 +595,7 @@
 		};
 	};
 
-	remoteproc_cdsp: remoteproc@800000 {
+	remoteproc_cdsp: remoteproc-cdsp@800000 {
 		compatible = "qcom,qcs405-cdsp-pas";
 		reg = <0x800000 0x00100>;
 
