--- a/qcom/slate.dtsi
+++ b/qcom/slate.dtsi
@@ -205,6 +205,10 @@
 			qcom,glink-channels = "ss_bt_ssr_data";
 			qcom,intents = <0xf2f8 10>;
 		};
+		qcom,glink-ss-bt-obex-data {
+			qcom,glink-channels = "ss_bt_obex_data";
+			qcom,intents = <0x1000 10>;
+		};
 	};
 
 	qcom,slatecom-rpmsg {
