--- a/qcom/direwolf-vm-pcie.dtsi
+++ b/qcom/direwolf-vm-pcie.dtsi
@@ -30,6 +30,7 @@
 				0 0 0 3 &intc GIC_SPI 532 IRQ_TYPE_LEVEL_HIGH
 				0 0 0 4 &intc GIC_SPI 533 IRQ_TYPE_LEVEL_HIGH>;
 
+		iommu-map = <0x0 &virt_smmuv3 0x20000 0x10000>;
 		msi-parent = <&pcie2a_msi_snps>;
 
 		perst-gpio = <&tlmm 143 0>;
