ARM: dts: msm: Increase DARE-TZ region and align with v11
Increase TA and Tags region to 26mb and 10mb respectively,
aligning it with v11 version of IPCAT memory map for crow.

Change-Id: I3cc627222a022b2025c25da616bc7288877f5d38

--- a/qcom/crow-reserved-memory.dtsi
+++ b/qcom/crow-reserved-memory.dtsi
@@ -177,12 +177,12 @@
 
 	ta_mem: ta_region@d8800000 {
 		no-map;
-		reg = <0x0 0xd8800000 0x0 0x1200000>;
+		reg = <0x0 0xd8800000 0x0 0x1a00000>;
 	};
 
-	tz_tags_mem: tz_tags_region@d9a00000 {
+	tz_tags_mem: tz_tags_region@da200000 {
 		no-map;
-		reg = <0x0 0xd9a00000 0x0 0x680000>;
+		reg = <0x0 0xda200000 0x0 0x680000>;
 	};
 
 	trust_ui_vm_mem: trust_ui_vm_region@f3800000 {
