--- a/qcom/crow.dtsi
+++ b/qcom/crow.dtsi
@@ -2833,6 +2833,7 @@
 		qcom,pas-id = <28>;
 		qcom,vmid = <45>;
 		qcom,firmware-name = "trustedvm";
+		qcom,keep-running;
 		memory-region = <&trust_ui_vm_mem>;
 		virtio-backends = <&trust_ui_vm_virt_be0 &trust_ui_vm_virt_be1>;
 	};
