ARM: dts: msm: Add dt variant for kona
Add wingmate subtype for mtp and qrd platform in kona.

Change-Id: I68e90845e80b4b909f15c08c1696a9ffbd341944

--- a/qcom/Makefile
+++ b/qcom/Makefile
@@ -152,7 +152,9 @@ KONA_BOARDS += \
                  kona-rb5-overlay-new.dtbo \
                  kona-iot-v2.1-vc-overlay.dtbo \
 		 kona-7230-iot-rb5-overlay.dtbo \
-		 kona-rb5-overlay.dtbo
+		 kona-rb5-overlay.dtbo \
+		 kona-qrd-wingmate-overlay.dtbo \
+		 kona-mtp-wingmate-overlay.dtbo
 
 
 KONA_LE_BOARDS += \
