ARM: dts: msm: Remove clock support for QRNG for LeMans GH GVM
Remove clock support for QRNG for LeMans GH GVM

Change-Id: Ic368bbab31bb70825ce22e8b3c8cce5bbb95d570

--- a/qcom/lemans-gunyah-vm.dtsi
+++ b/qcom/lemans-gunyah-vm.dtsi
@@ -1,7 +1,6 @@
 #include <dt-bindings/interrupt-controller/arm-gic.h>
 #include <dt-bindings/clock/qcom,gcc-lemans.h>
 #include <dt-bindings/arm/msm/qcom_dma_heap_dt_constants.h>
-#include <dt-bindings/clock/qcom,rpmh.h>
 
 / {
 	#address-cells = <0x2>;
@@ -486,12 +485,6 @@
 		#reset-cells = <1>;
 	};
 
-	dummycc: qcom,dummycc {
-		compatible = "qcom,dummycc";
-		#clock-cells = <1>;
-		#reset-cells = <1>;
-	};
-
 	psci {
 		compatible = "arm,psci-1.0";
 		method = "smc";
@@ -547,8 +540,7 @@
 		compatible = "qcom,msm-rng";
 		reg = <0x10dc000 0x1000>;
 		qcom,no-qrng-config;
-		clocks = <&dummycc RPMH_HWKM_CLK>;
-		clock-names = "km_clk_src";
+		qcom,no-clock-support;
 		status = "ok";
 	};
 
