ARM: dts: msm: Add iommu-dma property for trinket
Set qcom,iommu-dma property to bypass for trinket platform
and set usb bam path for trinket.

Change-Id: Ia9d09eccff552869d630e6fb5685e99a3084026d

--- a/qcom/trinket-usb.dtsi
+++ b/qcom/trinket-usb.dtsi
@@ -51,6 +51,7 @@
 			compatible = "snps,dwc3";
 			reg = <0x4e00000 0xcd00>;
 			iommus = <&apps_smmu 0x100 0x0>;
+			qcom,iommu-dma = "bypass";
 
 			interrupt-parent = <&intc>;
 			interrupts = <GIC_SPI 255 IRQ_TYPE_LEVEL_HIGH>;
