--- a/qcom/trinket-coresight.dtsi
+++ b/qcom/trinket-coresight.dtsi
@@ -62,7 +62,7 @@
 
 		coresight-name = "coresight-tmc-etr";
 		qcom,mem_support;
-		qcom,sw-usb;
+		usb_bam_support;
 		qcom,iommu-dma = "bypass";
 		qcom,iommu-dma-addr-pool = <0x0 0xffc00000>;
 
