ARM: dts: msm: Enable IOMMU DMA for the LeMans GH VM
Enable IOMMU DMA for optimized mapping support for the LeMans GH VM.

Change-Id: Ib12f810207858fbe871f51c66a3c4ef4ab2497e8

--- a/qcom/lemans-gunyah-vm.dtsi
+++ b/qcom/lemans-gunyah-vm.dtsi
@@ -563,6 +563,11 @@
 		qcom,use-3-lvl-tables;
 		dma-coherent;
 	};
+
+	dma_dev@0x0 {
+		compatible = "qcom,iommu-dma";
+		memory-region = <&system_cma>;
+	};
 };
 
 / {
