--- a/qcom/trinketp-iot-dp-idp-overlay.dts
+++ b/qcom/trinketp-iot-dp-idp-overlay.dts
@@ -9,3 +9,10 @@
 	qcom,msm-id = <468 0x10000>;
 	qcom,board-id = <34 4>;
 };
+
+&usb0 {
+	dwc3@4e00000 {
+		usb-phy = <&qusb_phy0>, <&usb_nop_phy>;
+		maximum-speed = "high-speed";
+	};
+};
