--- a/qcom/trinketp-iot-dp-idp.dts
+++ b/qcom/trinketp-iot-dp-idp.dts
@@ -8,3 +8,10 @@
 	compatible = "qcom,trinketp-iot-idp", "qcom,trinketp-iot", "qcom,idp";
 	qcom,board-id = <34 4>;
 };
+
+&usb0 {
+	dwc3@4e00000 {
+		usb-phy = <&qusb_phy0>, <&usb_nop_phy>;
+		maximum-speed = "high-speed";
+	};
+};
