--- a/qcom/kalamap-hdk-overlay.dts
+++ b/qcom/kalamap-hdk-overlay.dts
@@ -9,3 +9,12 @@
 	qcom,msm-id = <536 0x10000>, <536 0x20000>, <601 0x20000>, <603 0x20000>;
 	qcom,board-id = <0x1001f 0>;
 };
+
+&pcie0 {
+	qcom,config-recovery;
+	qcom,drv-name = "lpass";
+};
+
+&pcie1 {
+	qcom,drv-name = "lpass";
+};
