--- a/qcom/kalama-pcie.dtsi
+++ b/qcom/kalama-pcie.dtsi
@@ -609,6 +609,46 @@
 		};
 	};
 
+	pcie1_msi: qcom,pcie1_msi@0x17110040 {
+		status = "disabled";
+		compatible = "qcom,pci-msi";
+		msi-controller;
+		reg = <0x17110040 0x0>;
+		interrupt-parent = <&intc>;
+		interrupts = <GIC_SPI 800 IRQ_TYPE_EDGE_RISING>,
+			     <GIC_SPI 801 IRQ_TYPE_EDGE_RISING>,
+			     <GIC_SPI 802 IRQ_TYPE_EDGE_RISING>,
+			     <GIC_SPI 803 IRQ_TYPE_EDGE_RISING>,
+			     <GIC_SPI 804 IRQ_TYPE_EDGE_RISING>,
+			     <GIC_SPI 805 IRQ_TYPE_EDGE_RISING>,
+			     <GIC_SPI 806 IRQ_TYPE_EDGE_RISING>,
+			     <GIC_SPI 807 IRQ_TYPE_EDGE_RISING>,
+			     <GIC_SPI 808 IRQ_TYPE_EDGE_RISING>,
+			     <GIC_SPI 809 IRQ_TYPE_EDGE_RISING>,
+			     <GIC_SPI 810 IRQ_TYPE_EDGE_RISING>,
+			     <GIC_SPI 811 IRQ_TYPE_EDGE_RISING>,
+			     <GIC_SPI 812 IRQ_TYPE_EDGE_RISING>,
+			     <GIC_SPI 813 IRQ_TYPE_EDGE_RISING>,
+			     <GIC_SPI 814 IRQ_TYPE_EDGE_RISING>,
+			     <GIC_SPI 815 IRQ_TYPE_EDGE_RISING>,
+			     <GIC_SPI 816 IRQ_TYPE_EDGE_RISING>,
+			     <GIC_SPI 817 IRQ_TYPE_EDGE_RISING>,
+			     <GIC_SPI 818 IRQ_TYPE_EDGE_RISING>,
+			     <GIC_SPI 819 IRQ_TYPE_EDGE_RISING>,
+			     <GIC_SPI 820 IRQ_TYPE_EDGE_RISING>,
+			     <GIC_SPI 821 IRQ_TYPE_EDGE_RISING>,
+			     <GIC_SPI 822 IRQ_TYPE_EDGE_RISING>,
+			     <GIC_SPI 823 IRQ_TYPE_EDGE_RISING>,
+			     <GIC_SPI 824 IRQ_TYPE_EDGE_RISING>,
+			     <GIC_SPI 825 IRQ_TYPE_EDGE_RISING>,
+			     <GIC_SPI 826 IRQ_TYPE_EDGE_RISING>,
+			     <GIC_SPI 827 IRQ_TYPE_EDGE_RISING>,
+			     <GIC_SPI 828 IRQ_TYPE_EDGE_RISING>,
+			     <GIC_SPI 829 IRQ_TYPE_EDGE_RISING>,
+			     <GIC_SPI 830 IRQ_TYPE_EDGE_RISING>,
+			     <GIC_SPI 831 IRQ_TYPE_EDGE_RISING>;
+	};
+
 	pcie_ep: qcom,pcie@0x40000000 {
 		compatible = "qcom,pcie-ep";
 			reg = <0x40002000 0x1000>,
