--- a/qcom/kalamap-hdk-overlay.dts
+++ b/qcom/kalamap-hdk-overlay.dts
@@ -17,4 +17,6 @@
 
 &pcie1 {
 	qcom,drv-name = "lpass";
+	msi-map = <0x0 &gic_its 0x1480 0x1>,
+		  <0x100 &gic_its 0x1481 0x1>; /* 32 event IDs */
 };
