--- a/qcom/kalama-pcie.dtsi
+++ b/qcom/kalama-pcie.dtsi
@@ -646,7 +646,23 @@
 			     <GIC_SPI 828 IRQ_TYPE_EDGE_RISING>,
 			     <GIC_SPI 829 IRQ_TYPE_EDGE_RISING>,
 			     <GIC_SPI 830 IRQ_TYPE_EDGE_RISING>,
-			     <GIC_SPI 831 IRQ_TYPE_EDGE_RISING>;
+			     <GIC_SPI 831 IRQ_TYPE_EDGE_RISING>,
+			     <GIC_SPI 832 IRQ_TYPE_EDGE_RISING>,
+			     <GIC_SPI 833 IRQ_TYPE_EDGE_RISING>,
+			     <GIC_SPI 834 IRQ_TYPE_EDGE_RISING>,
+			     <GIC_SPI 835 IRQ_TYPE_EDGE_RISING>,
+			     <GIC_SPI 836 IRQ_TYPE_EDGE_RISING>,
+			     <GIC_SPI 837 IRQ_TYPE_EDGE_RISING>,
+			     <GIC_SPI 838 IRQ_TYPE_EDGE_RISING>,
+			     <GIC_SPI 839 IRQ_TYPE_EDGE_RISING>,
+			     <GIC_SPI 840 IRQ_TYPE_EDGE_RISING>,
+			     <GIC_SPI 841 IRQ_TYPE_EDGE_RISING>,
+			     <GIC_SPI 842 IRQ_TYPE_EDGE_RISING>,
+			     <GIC_SPI 843 IRQ_TYPE_EDGE_RISING>,
+			     <GIC_SPI 844 IRQ_TYPE_EDGE_RISING>,
+			     <GIC_SPI 845 IRQ_TYPE_EDGE_RISING>,
+			     <GIC_SPI 846 IRQ_TYPE_EDGE_RISING>,
+			     <GIC_SPI 847 IRQ_TYPE_EDGE_RISING>;
 	};
 
 	pcie_ep: qcom,pcie@0x40000000 {
