--- a/qcom/kalama.dtsi
+++ b/qcom/kalama.dtsi
@@ -2988,6 +2988,8 @@
 		qcom,vmid = <50>;
 		qcom,firmware-name = "cpusys_vm";
 		memory-region = <&cpusys_vm_mem>;
+		ext-region = <&chipinfo_mem>;
+		ext-label = <0x7>;
 	};
 
 	llcc_pmu: llcc-pmu@24095000 {
