--- a/qcom/lemans-gunyah-vm.dtsi
+++ b/qcom/lemans-gunyah-vm.dtsi
@@ -137,7 +137,7 @@
 		qcom,qtee-config-info = "p=3,57,77,78,7C,8F,97,159,199,47E,7F1;";
 		qcom,secdomain-ids = <52>;
 		qcom,primary-vm-index = <0>;
-		vm-attrs = "crash-fatal";
+		/* vm-attrs = "crash-fatal"; */
 
 		/* Pass through regions */
 		/* TLMM region */
