ARM: dts: msm: update qmp and qsi reg offset
Update qmp and qsi reg-offset to be compatible with
latest kernel for adb.

Change-Id: I530ed3f851c2aa0644234f5273311b55e99262f1

--- a/qcom/sdm845-670-usb-common.dtsi
+++ b/qcom/sdm845-670-usb-common.dtsi
@@ -1,4 +1,5 @@
 #include <dt-bindings/clock/qcom,gcc-sdm845.h>
+#include <dt-bindings/phy/qcom,qcs605-qmp-usb3.h>
 
 &soc {
 	/* Primary USB port related DWC3 controller */
@@ -7,8 +8,7 @@
 		reg = <0x0a600000 0xf8c00>,
 		      <0x088ee000 0x400>;
 		reg-names = "core_base", "ahb2phy_base";
-		iommus = <&apps_smmu 0x740 0x0>;
-		qcom,smmu-s1-bypass;
+
 		#address-cells = <1>;
 		#size-cells = <1>;
 		ranges;
@@ -23,9 +23,15 @@
 		USB3_GDSC-supply = <&usb30_prim_gdsc>;
 		qcom,dwc-usb3-msm-tx-fifo-size = <21288>;
 		qcom,num-gsi-evt-buffs = <0x3>;
+		qcom,gsi-reg-offset =
+			<0x0fc /* GSI_GENERAL_CFG */
+			 0x110 /* GSI_DBL_ADDR_L */
+			 0x120 /* GSI_DBL_ADDR_H */
+			 0x130 /* GSI_RING_BASE_ADDR_L */
+			 0x144 /* GSI_RING_BASE_ADDR_H */
+			 0x1a4>; /* GSI_IF_STS */
 		qcom,use-pdc-interrupts;
 		qcom,pm-qos-latency = <44>;
-		extcon = <0>, <0>, <&eud>, <0>, <0>;
 
 		clocks = <&gcc GCC_USB30_PRIM_MASTER_CLK>,
 			 <&gcc GCC_CFG_NOC_USB3_PRIM_AXI_CLK>,
@@ -47,6 +53,10 @@
 		dwc3@a600000 {
 			compatible = "snps,dwc3";
 			reg = <0x0a600000 0xcd00>;
+
+			iommus = <&apps_smmu 0x740 0x0>;
+			qcom,iommu-dma = "bypass";
+
 			interrupts = <0 133 IRQ_TYPE_LEVEL_HIGH>;
 			usb-phy = <&qusb_phy0>, <&usb_qmp_dp_phy>;
 			tx-fifo-resize;
@@ -56,6 +66,9 @@
 			snps,hird-threshold = /bits/ 8 <0x10>;
 			snps,usb3_lpm_capable;
 			usb-core-id = <0>;
+			maximum-speed = "super-speed";
+			dr_mode = "otg";
+			usb-role-switch;
 		};
 
 		qcom,usbbam@a704000 {
@@ -114,8 +127,6 @@
 			 0x0a8 /* QUSB2PHY_PLL_CORE_INPUT_OVERRIDE */
 			 0x254 /* QUSB2PHY_TEST1 */
 			 0x198 /* PLL_BIAS_CONTROL_2 */
-			 0x228 /* QUSB2PHY_SQ_CTRL1 */
-			 0x22c /* QUSB2PHY_SQ_CTRL2 */
 			 0x27c /* QUSB2PHY_DEBUG_CTRL1 */
 			 0x280 /* QUSB2PHY_DEBUG_CTRL2 */
 			 0x284 /* QUSB2PHY_DEBUG_CTRL3 */
@@ -164,116 +175,115 @@
 		qcom,vbus-valid-override;
 		qcom,qmp-phy-init-seq =
 		/* <reg_offset, value, delay> */
-			<0x1048 0x07 0x00 /* COM_PLL_IVCO */
-			 0x1080 0x14 0x00 /* COM_SYSCLK_EN_SEL */
-			 0x1034 0x08 0x00 /* COM_BIAS_EN_CLKBUFLR_EN */
-			 0x1138 0x30 0x00 /* COM_CLK_SELECT */
-			 0x103c 0x02 0x00 /* COM_SYS_CLK_CTRL */
-			 0x108c 0x08 0x00 /* COM_RESETSM_CNTRL2 */
-			 0x115c 0x16 0x00 /* COM_CMN_CONFIG */
-			 0x1164 0x01 0x00 /* COM_SVS_MODE_CLK_SEL */
-			 0x113c 0x80 0x00 /* COM_HSCLK_SEL */
-			 0x10b0 0x82 0x00 /* COM_DEC_START_MODE0 */
-			 0x10b8 0xab 0x00 /* COM_DIV_FRAC_START1_MODE0 */
-			 0x10bc 0xea 0x00 /* COM_DIV_FRAC_START2_MODE0 */
-			 0x10c0 0x02 0x00 /* COM_DIV_FRAC_START3_MODE0 */
-			 0x1060 0x06 0x00 /* COM_CP_CTRL_MODE0 */
-			 0x1068 0x16 0x00 /* COM_PLL_RCTRL_MODE0 */
-			 0x1070 0x36 0x00 /* COM_PLL_CCTRL_MODE0 */
-			 0x10dc 0x00 0x00 /* COM_INTEGLOOP_GAIN1_MODE0 */
-			 0x10d8 0x3f 0x00 /* COM_INTEGLOOP_GAIN0_MODE0 */
-			 0x10f8 0x01 0x00 /* COM_VCO_TUNE2_MODE0 */
-			 0x10f4 0xc9 0x00 /* COM_VCO_TUNE1_MODE0 */
-			 0x1148 0x0a 0x00 /* COM_CORECLK_DIV_MODE0 */
-			 0x10a0 0x00 0x00 /* COM_LOCK_CMP3_MODE0 */
-			 0x109c 0x34 0x00 /* COM_LOCK_CMP2_MODE0 */
-			 0x1098 0x15 0x00 /* COM_LOCK_CMP1_MODE0 */
-			 0x1090 0x04 0x00 /* COM_LOCK_CMP_EN */
-			 0x1154 0x00 0x00 /* COM_CORE_CLK_EN */
-			 0x1094 0x00 0x00 /* COM_LOCK_CMP_CFG */
-			 0x10f0 0x00 0x00 /* COM_VCO_TUNE_MAP */
-			 0x1040 0x0a 0x00 /* COM_SYSCLK_BUF_ENABLE */
-			 0x1010 0x01 0x00 /* COM_SSC_EN_CENTER */
-			 0x101c 0x31 0x00 /* COM_SSC_PER1 */
-			 0x1020 0x01 0x00 /* COM_SSC_PER2 */
-			 0x1014 0x00 0x00 /* COM_SSC_ADJ_PER1 */
-			 0x1018 0x00 0x00 /* COM_SSC_ADJ_PER2 */
-			 0x1024 0x85 0x00 /* COM_SSC_STEP_SIZE1 */
-			 0x1028 0x07 0x00 /* COM_SSC_STEP_SIZE2 */
-			 0x1430 0x0b 0x00 /* RXA_UCDR_FASTLOCK_FO_GAIN */
-			 0x14d4 0x0f 0x00 /* RXA_RX_EQU_ADAPTOR_CNTRL2 */
-			 0x14d8 0x4e 0x00 /* RXA_RX_EQU_ADAPTOR_CNTRL3 */
-			 0x14dc 0x18 0x00 /* RXA_RX_EQU_ADAPTOR_CNTRL4 */
-			 0x14f8 0x77 0x00 /* RXA_RX_EQ_OFFSET_ADAPTOR_CNTRL1 */
-			 0x14fc 0x80 0x00 /* RXA_RX_OFFSET_ADAPTOR_CNTRL2 */
-			 0x1504 0x03 0x00 /* RXA_SIGDET_CNTRL */
-			 0x150c 0x16 0x00 /* RXA_SIGDET_DEGLITCH_CNTRL */
-			 0x1564 0x05 0x00 /* RXA_RX_MODE_00 */
-			 0x14c0 0x03 0x00 /* RXA_VGA_CAL_CNTRL2 */
-			 0x1830 0x0b 0x00 /* RXB_UCDR_FASTLOCK_FO_GAIN */
-			 0x18d4 0x0f 0x00 /* RXB_RX_EQU_ADAPTOR_CNTRL2 */
-			 0x18d8 0x4e 0x00 /* RXB_RX_EQU_ADAPTOR_CNTRL3 */
-			 0x18dc 0x18 0x00 /* RXB_RX_EQU_ADAPTOR_CNTRL4 */
-			 0x18f8 0x77 0x00 /* RXB_RX_EQ_OFFSET_ADAPTOR_CNTRL1 */
-			 0x18fc 0x80 0x00 /* RXB_RX_OFFSET_ADAPTOR_CNTRL2 */
-			 0x1904 0x03 0x00 /* RXB_SIGDET_CNTRL */
-			 0x190c 0x16 0x00 /* RXB_SIGDET_DEGLITCH_CNTRL */
-			 0x1964 0x05 0x00 /* RXB_RX_MODE_00 */
-			 0x18c0 0x03 0x00 /* RXB_VGA_CAL_CNTRL2 */
-			 0x1260 0x10 0x00 /* TXA_HIGHZ_DRVR_EN */
-			 0x12a4 0x12 0x00 /* TXA_RCV_DETECT_LVL_2 */
-			 0x128c 0x16 0x00 /* TXA_LANE_MODE_1 */
-			 0x1248 0x09 0x00 /* TXA_RES_CODE_LANE_OFFSET_RX */
-			 0x1244 0x06 0x00 /* TXA_RES_CODE_LANE_OFFSET_TX */
-			 0x1660 0x10 0x00 /* TXB_HIGHZ_DRVR_EN */
-			 0x16a4 0x12 0x00 /* TXB_RCV_DETECT_LVL_2 */
-			 0x168c 0x16 0x00 /* TXB_LANE_MODE_1 */
-			 0x1648 0x09 0x00 /* TXB_RES_CODE_LANE_OFFSET_RX */
-			 0x1644 0x06 0x00 /* TXB_RES_CODE_LANE_OFFSET_TX */
-			 0x1cc8 0x83 0x00 /* PCS_FLL_CNTRL2 */
-			 0x1ccc 0x09 0x00 /* PCS_FLL_CNT_VAL_L */
-			 0x1cd0 0xa2 0x00 /* PCS_FLL_CNT_VAL_H_TOL */
-			 0x1cd4 0x40 0x00 /* PCS_FLL_MAN_CODE */
-			 0x1cc4 0x02 0x00 /* PCS_FLL_CNTRL1 */
-			 0x1c80 0xd1 0x00 /* PCS_LOCK_DETECT_CONFIG1 */
-			 0x1c84 0x1f 0x00 /* PCS_LOCK_DETECT_CONFIG2 */
-			 0x1c88 0x47 0x00 /* PCS_LOCK_DETECT_CONFIG3 */
-			 0x1c64 0x1b 0x00 /* PCS_POWER_STATE_CONFIG2 */
-			 0x1434 0x75 0x00 /* RXA_UCDR_SO_SATURATION */
-			 0x1834 0x75 0x00 /* RXB_UCDR_SO_SATURATION */
-			 0x1dd8 0xba 0x00 /* PCS_RX_SIGDET_LVL */
-			 0x1c0c 0x9f 0x00 /* PCS_TXMGN_V0 */
-			 0x1c10 0x9f 0x00 /* PCS_TXMGN_V1 */
-			 0x1c14 0xb7 0x00 /* PCS_TXMGN_V2 */
-			 0x1c18 0x4e 0x00 /* PCS_TXMGN_V3 */
-			 0x1c1c 0x65 0x00 /* PCS_TXMGN_V4 */
-			 0x1c20 0x6b 0x00 /* PCS_TXMGN_LS */
-			 0x1c24 0x15 0x00 /* PCS_TXDEEMPH_M6DB_V0 */
-			 0x1c28 0x0d 0x00 /* PCS_TXDEEMPH_M3P5DB_V0 */
-			 0x1c2c 0x15 0x00 /* PCS_TXDEEMPH_M6DB_V1 */
-			 0x1c30 0x0d 0x00 /* PCS_TXDEEMPH_M3P5DB_V1 */
-			 0x1c34 0x15 0x00 /* PCS_TXDEEMPH_M6DB_V2 */
-			 0x1c38 0x0d 0x00 /* PCS_TXDEEMPH_M3P5DB_V2 */
-			 0x1c3c 0x15 0x00 /* PCS_TXDEEMPH_M6DB_V3 */
-			 0x1c40 0x1d 0x00 /* PCS_TXDEEMPH_M3P5DB_V3 */
-			 0x1c44 0x15 0x00 /* PCS_TXDEEMPH_M6DB_V4 */
-			 0x1c48 0x0d 0x00 /* PCS_TXDEEMPH_M3P5DB_V4 */
-			 0x1c4c 0x15 0x00 /* PCS_TXDEEMPH_M6DB_LS */
-			 0x1c50 0x0d 0x00 /* PCS_TXDEEMPH_M3P5DB_LS */
-			 0x1e0c 0x21 0x00 /* PCS_REFGEN_REQ_CONFIG1 */
-			 0x1e10 0x60 0x00 /* PCS_REFGEN_REQ_CONFIG2 */
-			 0x1c5c 0x02 0x00 /* PCS_RATE_SLEW_CNTRL */
-			 0x1ca0 0x04 0x00 /* PCS_PWRUP_RESET_DLY_TIME_AUXCLK */
-			 0x1c8c 0x44 0x00 /* PCS_TSYNC_RSYNC_TIME */
-			 0x1c70 0xe7 0x00 /* PCS_RCVR_DTCT_DLY_P1U2_L */
-			 0x1c74 0x03 0x00 /* PCS_RCVR_DTCT_DLY_P1U2_H */
-			 0x1c78 0x40 0x00 /* PCS_RCVR_DTCT_DLY_U3_L */
-			 0x1c7c 0x00 0x00 /* PCS_RCVR_DTCT_DLY_U3_H */
-			 0x1cb8 0x75 0x00 /* PCS_RXEQTRAINING_WAIT_TIME */
-			 0x1cb0 0x86 0x00 /* PCS_LFPS_TX_ECSTART_EQTLOCK */
-			 0x1cbc 0x13 0x00 /* PCS_RXEQTRAINING_RUN_TIME */
-			 0x1cac 0x04 0x00 /* PCS_LFPS_DET_HIGH_COUNT_VAL */
-			 0xffffffff 0xffffffff 0x00>;
+			<USB3_DP_QSERDES_COM_CLK_ENABLE1 0x07
+			 USB3_DP_QSERDES_COM_PLL_RCTRL_MODE1 0x14
+			 USB3_DP_QSERDES_COM_SSC_STEP_SIZE2_MODE1 0x08
+			 USB3_DP_QSERDES_COM_VCO_TUNE_TIMER1 0x30
+			 USB3_DP_QSERDES_COM_POST_DIV 0x02
+			 USB3_DP_QSERDES_COM_PLL_CNTRL 0x08
+			 USB3_DP_QSERDES_COM_HSCLK_HS_SWITCH_SEL 0x16
+			 USB3_DP_QSERDES_COM_PLL_ANALOG 0x01
+			 USB3_DP_QSERDES_COM_VCO_TUNE_TIMER2 0x80
+			 USB3_DP_QSERDES_COM_LOCK_CMP2_MODE0 0x82
+			 USB3_DP_QSERDES_COM_LOCK_CMP2_MODE1 0xab
+			 USB3_DP_QSERDES_COM_DEC_START_MODE0 0xea
+			 USB3_DP_QSERDES_COM_DEC_START_MSB_MODE0 0x02
+			 USB3_DP_QSERDES_COM_CMN_IPTRIM 0x06
+			 USB3_DP_QSERDES_COM_SYSCLK_DET_COMP_STATUS 0x16
+			 USB3_DP_QSERDES_COM_CLK_EP_DIV_MODE1 0x36
+			 USB3_DP_QSERDES_COM_DIV_FRAC_START2_MODE1 0x00
+			 USB3_DP_QSERDES_COM_DIV_FRAC_START1_MODE1 0x3f
+			 USB3_DP_QSERDES_COM_INTEGLOOP_GAIN1_MODE1 0x01
+			 USB3_DP_QSERDES_COM_INTEGLOOP_GAIN0_MODE1 0xc9
+			 USB3_DP_QSERDES_COM_RESTRIM_CODE_STATUS 0x0a
+			 USB3_DP_QSERDES_COM_RESETSM_CNTRL2 0x00
+			 USB3_DP_QSERDES_COM_RESETSM_CNTRL 0x34
+			 USB3_DP_QSERDES_COM_CML_SYSCLK_SEL 0x15
+			 USB3_DP_QSERDES_COM_BIAS_EN_CTRL_BY_PSM 0x04
+			 USB3_DP_QSERDES_COM_CLK_SELECT 0x00
+			 USB3_DP_QSERDES_COM_SYSCLK_EN_SEL 0x00
+			 USB3_DP_QSERDES_COM_INTEGLOOP_GAIN1_MODE0 0x00
+			 USB3_DP_QSERDES_COM_POST_DIV_MUX 0x0a
+			 USB3_DP_QSERDES_COM_SSC_EN_CENTER 0x01
+			 USB3_DP_QSERDES_COM_SSC_PER1 0x31
+			 USB3_DP_QSERDES_COM_SSC_PER2 0x01
+			 USB3_DP_QSERDES_COM_SSC_ADJ_PER1 0x00
+			 USB3_DP_QSERDES_COM_SSC_ADJ_PER2 0x00
+			 USB3_DP_QSERDES_COM_SSC_STEP_SIZE1_MODE0 0x85
+			 USB3_DP_QSERDES_COM_SSC_STEP_SIZE2_MODE0 0x07
+			 USB3_DP_QSERDES_RXA_UCDR_FASTLOCK_FO_GAIN 0x0b
+			 USB3_DP_QSERDES_RXA_VGA_CAL_CNTRL1 0x0f
+			 USB3_DP_QSERDES_RXA_VGA_CAL_CNTRL2 0x4e
+			 USB3_DP_QSERDES_RXA_GM_CAL 0x18
+			 USB3_DP_QSERDES_RXA_RX_IDAC_TSETTLE_LOW 0x77
+			 USB3_DP_QSERDES_RXA_RX_IDAC_TSETTLE_HIGH 0x80
+			 USB3_DP_QSERDES_RXA_RX_IDAC_ACCUMULATOR 0x03
+			 USB3_DP_QSERDES_RXA_RX_EQ_OFFSET_MSB 0x16
+			 USB3_DP_QSERDES_RXA_RX_PWM_GEAR2_TIMEOUT_COUNT 0x05
+			 USB3_DP_QSERDES_RXA_DFE_4 0x03
+			 USB3_DP_QSERDES_RXB_UCDR_FASTLOCK_FO_GAIN 0x0b
+			 USB3_DP_QSERDES_RXB_VGA_CAL_CNTRL1 0x0f
+			 USB3_DP_QSERDES_RXB_VGA_CAL_CNTRL2 0x4e
+			 USB3_DP_QSERDES_RXB_GM_CAL 0x18
+			 USB3_DP_QSERDES_RXB_RX_IDAC_TSETTLE_LOW 0x77
+			 USB3_DP_QSERDES_RXB_RX_IDAC_TSETTLE_HIGH 0x80
+			 USB3_DP_QSERDES_RXB_RX_IDAC_ACCUMULATOR 0x03
+			 USB3_DP_QSERDES_RXB_RX_EQ_OFFSET_MSB 0x16
+			 USB3_DP_QSERDES_RXB_RX_PWM_GEAR2_TIMEOUT_COUNT 0x05
+			 USB3_DP_QSERDES_RXB_DFE_4 0x03
+			 USB3_DP_QSERDES_TXA_PARRATE_REC_DETECT_IDLE_EN 0x10
+			 USB3_DP_QSERDES_TXA_PRBS_SEED2 0x12
+			 USB3_DP_QSERDES_TXA_LANE_MODE_3 0x16
+			 USB3_DP_QSERDES_TXA_PERL_LENGTH2 0x09
+			 USB3_DP_QSERDES_TXA_PERL_LENGTH1 0x06
+			 USB3_DP_QSERDES_TXB_PARRATE_REC_DETECT_IDLE_EN 0x10
+			 USB3_DP_QSERDES_TXB_PRBS_SEED2 0x12
+			 USB3_DP_QSERDES_TXB_LANE_MODE_3 0x16
+			 USB3_DP_QSERDES_TXB_PERL_LENGTH2 0x09
+			 USB3_DP_QSERDES_TXB_PERL_LENGTH1 0x06
+			 USB3_DP_PCS_LOCK_DETECT_CONFIG2 0x83
+			 USB3_DP_PCS_LOCK_DETECT_CONFIG3 0x09
+			 USB3_DP_PCS_LOCK_DETECT_CONFIG4 0xa2
+			 USB3_DP_PCS_LOCK_DETECT_CONFIG5 0x40
+			 USB3_DP_PCS_LOCK_DETECT_CONFIG1 0x02
+			 USB3_DP_PCS_INSIG_MX_CTRL8 0xd1
+			 USB3_DP_PCS_OUTSIG_SW_CTRL1 0x1f
+			 USB3_DP_PCS_OUTSIG_MX_CTRL1 0x47
+			 USB3_DP_PCS_INSIG_SW_CTRL8 0x1b
+			 USB3_DP_QSERDES_RXA_UCDR_SO_SATURATION_AND_ENABLE 0x75
+			 USB3_DP_QSERDES_RXB_UCDR_SO_SATURATION_AND_ENABLE 0x75
+			 USB3_DP_PCS_RX_DCC_CAL_CONFIG 0xba
+			 USB3_DP_PCS_REVISION_ID2 0x9f
+			 USB3_DP_PCS_REVISION_ID3 0x9f
+			 USB3_DP_PCS_PCS_STATUS1 0xb7
+			 USB3_DP_PCS_PCS_STATUS2 0x4e
+			 USB3_DP_PCS_PCS_STATUS3 0x65
+			 USB3_DP_PCS_PCS_STATUS4 0x6b
+			 USB3_DP_PCS_PCS_STATUS5 0x15
+			 USB3_DP_PCS_PCS_STATUS6 0x0d
+			 USB3_DP_PCS_PCS_STATUS7 0x15
+			 USB3_DP_PCS_DEBUG_BUS_0_STATUS 0x0d
+			 USB3_DP_PCS_DEBUG_BUS_1_STATUS 0x15
+			 USB3_DP_PCS_DEBUG_BUS_2_STATUS 0x0d
+			 USB3_DP_PCS_DEBUG_BUS_3_STATUS 0x15
+			 USB3_DP_PCS_POWER_DOWN_CONTROL 0x1d
+			 USB3_DP_PCS_START_CONTROL 0x15
+			 USB3_DP_PCS_INSIG_SW_CTRL1 0x0d
+			 USB3_DP_PCS_INSIG_SW_CTRL2 0x15
+			 USB3_DP_PCS_INSIG_SW_CTRL3 0x0d
+			 USB3PHY_PCS_REFGEN_REQ_CONFIG1 0x21
+			 USB3PHY_PCS_REFGEN_REQ_CONFIG2 0x60
+			 USB3_DP_PCS_INSIG_SW_CTRL6 0x02
+			 USB3_DP_PCS_FLL_CNT_VAL_L 0x04
+			 USB3_DP_PCS_CLAMP_ENABLE 0x44
+			 USB3_DP_PCS_INSIG_MX_CTRL3 0xe7
+			 USB3_DP_PCS_INSIG_MX_CTRL4 0x03
+			 USB3_DP_PCS_INSIG_MX_CTRL5 0x40
+			 USB3_DP_PCS_INSIG_MX_CTRL7 0x00
+			 USB3_DP_PCS_TEST_CONTROL4 0x75
+			 USB3_DP_PCS_TEST_CONTROL2 0x86
+			 USB3_DP_PCS_TEST_CONTROL5 0x13
+			 USB3_DP_PCS_TEST_CONTROL1 0x04>;
 
 		qcom,qmp-phy-reg-offset =
 				<0x1d74 /* USB3_DP_PCS_PCS_STATUS */
@@ -282,13 +292,12 @@
 				 0x1c04 /* USB3_DP_PCS_POWER_DOWN_CONTROL */
 				 0x1c00 /* USB3_DP_PCS_SW_RESET */
 				 0x1c08 /* USB3_DP_PCS_START_CONTROL */
-				 0x2a18 /* USB3_DP_DP_PHY_PD_CTL */
+				 0xffff /* USB3_PHY_PCS_MISC_TYPEC_CTRL */
 				 0x0008 /* USB3_DP_COM_POWER_DOWN_CTRL */
 				 0x0004 /* USB3_DP_COM_SW_RESET */
 				 0x001c /* USB3_DP_COM_RESET_OVRD_CTRL */
 				 0x0000 /* USB3_DP_COM_PHY_MODE_CTRL */
 				 0x0010 /* USB3_DP_COM_TYPEC_CTRL */
-				 0x000c /* USB3_DP_COM_SWI_CTRL */
 				 0x1a0c>; /* USB3_DP_PCS_MISC_CLAMP_ENABLE */
 
 		clocks = <&gcc GCC_USB3_PRIM_PHY_AUX_CLK>,
@@ -395,8 +404,6 @@
 			 0x0a8 /* QUSB2PHY_PLL_CORE_INPUT_OVERRIDE */
 			 0x254 /* QUSB2PHY_TEST1 */
 			 0x198 /* PLL_BIAS_CONTROL_2 */
-			 0x228 /* QUSB2PHY_SQ_CTRL1 */
-			 0x22c /* QUSB2PHY_SQ_CTRL2 */
 			 0x27c /* QUSB2PHY_DEBUG_CTRL1 */
 			 0x280 /* QUSB2PHY_DEBUG_CTRL2 */
 			 0x2a0>; /* QUSB2PHY_STAT5 */
