--- a/qcom/trinket.dtsi
+++ b/qcom/trinket.dtsi
@@ -1199,6 +1199,14 @@
 		hyplog-size-offset = <0x414>;
 	};
 
+	qcom_rng: qrng@1b53000 {
+		compatible = "qcom,msm-rng";
+		reg = <0x1b53000 0x1000>;
+		qcom,no-qrng-config;
+		clock-names = "iface_clk";
+		clocks = <&rpmcc GCC_PRNG_AHB_CLK>;
+	};
+
 	qcom_cedev: qcedev@1b20000 {
 		compatible = "qcom,qcedev";
 		reg = <0x1b20000 0x20000>,
