--- a/qcom/lemans-qupv3.dtsi
+++ b/qcom/lemans-qupv3.dtsi
@@ -5,7 +5,7 @@
 		#dma-cells = <5>;
 		reg = <0x900000  0x60000>;
 		reg-names = "gpi-top";
-		iommus = <&apps_smmu 0x456 0x0>;
+		iommus = <&apps_smmu 0x416 0x0>;
 		qcom,max-num-gpii = <12>;
 		interrupts = <GIC_SPI 244 IRQ_TYPE_LEVEL_HIGH>,
 			<GIC_SPI 245 IRQ_TYPE_LEVEL_HIGH>,
@@ -671,7 +671,7 @@
 			reg = <0xa98000 0x4000>;
 			#address-cells = <1>;
 			#size-cells = <0>;
-			interrupts = <GIC_SPI 836 IRQ_TYPE_LEVEL_HIGH>;
+			interrupts = <GIC_SPI 835 IRQ_TYPE_LEVEL_HIGH>;
 			clock-names = "se-clk";
 			clocks = <&gcc GCC_QUPV3_WRAP1_S6_CLK>;
 			interconnect-names = "qup-core", "qup-config", "qup-memory";
@@ -692,7 +692,7 @@
 		#dma-cells = <5>;
 		reg = <0x800000  0x60000>;
 		reg-names = "gpi-top";
-		iommus = <&apps_smmu 0x456 0x0>;
+		iommus = <&apps_smmu 0x5b6 0x0>;
 		qcom,max-num-gpii = <12>;
 		interrupts = <GIC_SPI 588 IRQ_TYPE_LEVEL_HIGH>,
 			<GIC_SPI 589 IRQ_TYPE_LEVEL_HIGH>,
@@ -1002,7 +1002,7 @@
 			reg = <0x898000 0x4000>;
 			#address-cells = <1>;
 			#size-cells = <0>;
-			interrupts = <GIC_SPI 834 IRQ_TYPE_LEVEL_HIGH>;
+			interrupts = <GIC_SPI 833 IRQ_TYPE_LEVEL_HIGH>;
 			clock-names = "se-clk";
 			clocks = <&gcc GCC_QUPV3_WRAP2_S6_CLK>;
 			interconnect-names = "qup-core", "qup-config", "qup-memory";
@@ -1022,7 +1022,7 @@
 			#address-cells = <1>;
 			#size-cells = <0>;
 			reg-names = "se_phys";
-			interrupts = <GIC_SPI 834 IRQ_TYPE_LEVEL_HIGH>;
+			interrupts = <GIC_SPI 833 IRQ_TYPE_LEVEL_HIGH>;
 			clock-names = "se-clk";
 			clocks = <&gcc GCC_QUPV3_WRAP2_S6_CLK>;
 			interconnect-names = "qup-core", "qup-config", "qup-memory";
