ARM: dts: msm: Add gpio-key to support KEY_POWER
An irq will be triggered on GPIO#59 line for waking up the target
from suspend by VIP.

Change-Id: I2409c6b0b3ad606358c8c73798b173c9a1b6abf5

--- a/qcom/lemans-adp-common.dtsi
+++ b/qcom/lemans-adp-common.dtsi
@@ -18,6 +18,15 @@
 			debounce-interval = <0>;
 			wakeup-source;
 		};
+
+		key_power {
+			label = "power";
+			linux,code = <KEY_POWER>;
+			gpios = <&tlmm 59 GPIO_ACTIVE_LOW>;
+			linux,input-type = <1>;
+			debounce-interval = <0>;
+			wakeup-source;
+		};
 	};
 };
 
