--- a/qcom/msm-arm-smmu-lemans.dtsi
+++ b/qcom/msm-arm-smmu-lemans.dtsi
@@ -363,7 +363,8 @@
 				<GIC_SPI 79 IRQ_TYPE_LEVEL_HIGH>,
 				<GIC_SPI 640 IRQ_TYPE_LEVEL_HIGH>;
 
-		interconnects = <&pcie_anoc MASTER_PCIE_0 &mc_virt SLAVE_EBI1>;
+		interconnects = <&pcie_anoc MASTER_PCIE_0 &mc_virt SLAVE_EBI1>,
+			<&pcie_anoc MASTER_PCIE_1 &mc_virt SLAVE_EBI1>;
 
 		pcie_0_tbu: pcie_0_tbu@152f9000 {
 			compatible = "qcom,qsmmuv500-tbu";
