--- a/qcom/trinket-dma-heaps.dtsi
+++ b/qcom/trinket-dma-heaps.dtsi
@@ -16,9 +16,10 @@
 			memory-region = <&qseecom_ta_mem>;
 		};
 
-		qcom,secure_display {
-			qcom,dma-heap-name = "qcom,secure-display";
+		qcom,display {
+			qcom,dma-heap-name = "qcom,display";
 			qcom,dma-heap-type = <HEAP_TYPE_CMA>;
+			qcom,max-align = <9>;
 			memory-region = <&secure_display_memory>;
 		};
 
