--- a/qcom/kalamap-rb5-gen2.dtsi
+++ b/qcom/kalamap-rb5-gen2.dtsi
@@ -29,6 +29,50 @@
 	qcom,uses_level_shifter;
 };
 
+&tlmm {
+	pice0_usb_power_1p05_default: pice0_usb_power_1p05_default {
+		mux {
+			pins = "gpio179";
+			function = "gpio";
+		};
+
+		config {
+			pins = "gpio179";
+			drive-strength = <2>;
+			output-high;
+			bias-pull-up;
+		};
+	};
+
+	pice0_usb_power_3p3_default: pice0_usb_power_3p3_default {
+		mux {
+			pins = "gpio13";
+			function = "gpio";
+		};
+
+		config {
+			pins = "gpio13";
+			drive-strength = <2>;
+			output-high;
+			bias-pull-up;
+		};
+	};
+
+	pice0_usb_ponrst_default: pice0_usb_ponrst_default {
+		mux {
+			pins = "gpio182";
+			function = "gpio";
+		};
+
+		config {
+			pins = "gpio182";
+			drive-strength = <2>;
+			output-high;
+			bias-pull-up;
+		};
+	};
+};
+
 &soc {
 
 	qps615_bridge0_0p9_vreg: qps615_bridge0_0p9_vreg {
@@ -71,6 +115,45 @@
 		regulator-max-microvolt = <1000000>;
 		enable-active-high;
 		regulator-enable-ramp-delay = <2000>;
+	};
+
+	pcie_usb_hub_1p05_vreg: pcie_usb_hub_1p05_vreg {
+		compatible = "regulator-fixed";
+		regulator-name = "pcie_usb_hub_1p05_vreg";
+		pinctrl-names = "default";
+		pinctrl-0 = <&pice0_usb_power_1p05_default>;
+		gpio = <&tlmm 179 GPIO_ACTIVE_HIGH>;
+		vin-supply = <&qps615_resx0_0p9_vreg>;
+		regulator-min-microvolt = <1000000>;
+		regulator-max-microvolt = <1000000>;
+		enable-active-high;
+		regulator-enable-ramp-delay = <5000>;
+	};
+
+	pcie_usb_hub_3p3_vreg: pcie_usb_hub_3p3_vreg {
+		compatible = "regulator-fixed";
+		regulator-name = "pcie_usb_hub_3p3_vreg";
+		pinctrl-names = "default";
+		pinctrl-0 = <&pice0_usb_power_3p3_default>;
+		gpio = <&tlmm 13 GPIO_ACTIVE_HIGH>;
+		vin-supply = <&pcie_usb_hub_1p05_vreg>;
+		regulator-min-microvolt = <3300000>;
+		regulator-max-microvolt = <3300000>;
+		enable-active-high;
+		regulator-enable-ramp-delay = <10000>;
+	};
+
+	usb_hub_rest_vreg: usb_hub_rest_vreg {
+		compatible = "regulator-fixed";
+		regulator-name = "usb_hub_rest_vreg";
+		pinctrl-names = "default";
+		pinctrl-0 = <&pice0_usb_ponrst_default>;
+		gpio = <&tlmm 182 GPIO_ACTIVE_HIGH>;
+		vin-supply = <&pcie_usb_hub_3p3_vreg>;
+		regulator-min-microvolt = <3300000>;
+		regulator-max-microvolt = <3300000>;
+		enable-active-high;
+		regulator-enable-ramp-delay = <10000>;
 	};
 
 	gpio_key {
@@ -590,15 +673,21 @@
 	};
 };
 
+&reserved_memory {
+	pci_usb_mem: pci_usb_region {
+		compatible = "shared-dma-pool";
+		alloc-ranges = <0x0 0x00000000 0x0 0xffffffff>;
+		reusable;
+		alignment = <0x0 0x400000>;
+		size = <0x0 0x2000000>;
+	};
+};
+
 &pcie0 {
 	qcom,boot-option = <0x2>;
 
-	pcie-usb-hub-power-1p05-gpio = <&tlmm 179 0>;
-	pcie-usb-hub-power-3p3-gpio = <&tlmm 13 0>;
-	pcie-usb-hub-ponreset-gpio = <&tlmm 182 0>;
-
 	pcie-i2c-phandle = <&qupv3_hub_i2c4>;
-	vreg-3p3-supply = <&qps615_resx0_0p9_vreg>;
+	vreg-3p3-supply = <&usb_hub_rest_vreg>;
 
 	 qcom,pcie-phy-ver = <102>;
 			qcom,phy-sequence = <0x0240 0x03 0x0
@@ -744,6 +833,23 @@
 		/* BDF 2.2.0 */
 		pcie0_bus2_dev2_fn0: pcie0_bus2_dev2_fn0 {
 			reg = <0x1000 0x0 0x0 0x0 0x0>;
+
+			/* BDF 4.0.0 */
+			pcie0_bus4_dev0_fn0: pcie0_bus4_dev0_fn0 {
+				reg = <0x0 0x0 0x0 0x0 0x0>;
+				qcom,iommu-group = <&xhci_pci_iommu_group0>;
+				memory-region = <&pci_usb_mem>;
+				#address-cells = <1>;
+				#size-cells = <1>;
+
+				xhci_pci_iommu_group0: xhci_pci_iommu_group0 {
+					qcom,iommu-msi-size = <0x1000>;
+					qcom,iommu-dma-addr-pool = <0xa0000000 0x10000000>;
+					qcom,iommu-dma = "fastmap";
+					qcom,iommu-pagetable = "coherent";
+					qcom,iommu-faults = "stall-disable", "HUPCF", "no-CFRE", "non-fatal";
+				};
+			};
 		};
 
 		/* BDF 2.3.0 */
