ARM: dts: qcom: Rename XBL dump memory node
Replace uefi_log_region with uefi_log to avoid parsing issue.

Change-Id: I4a885a0f5c9a4456760a04d1505366ac82795a9b

--- a/qcom/lemans.dtsi
+++ b/qcom/lemans.dtsi
@@ -369,7 +369,7 @@
 		reg = <0x0 0x90860000 0x0 0x20000>;
 	};
 
-	uefi_log: uefi_log_region@908b0000 {
+	uefi_log: uefi_log@908b0000 {
 		no-map;
 		reg = <0x0 0x908b0000 0x0 0x10000>;
 	};
