ARM: dts: msm: enable GIC SPI interrupts for PCIe0 on RB5 platform
LPI based MSI interrupts are not working for USB Hub which is
connected to PCIe0 instance through qps615 pcie switch. So,
deleting LPI msi-map and enabling GIC SPI based MSI interrupts
for PCIe0 instance.

This patch does:
    1) removes LPI msi-map and enables GIC SPI interrupts for RB5
    2) restores LPI msi-map interrupts for HDK platforms

Change-Id: I7d35a94bdfb8ddede30c92969abda5cb441d9f01

--- a/qcom/kalamap-qcs.dts
+++ b/qcom/kalamap-qcs.dts
@@ -11,6 +11,7 @@
 &pcie0 {
 	/delete-property/ qcom,config-recovery;
 	/delete-property/ qcom,drv-name;
+	/delete-property/ msi-map;
 };
 
 &pcie1 {
