--- a/qcom/kalamap-rb5-gen2.dtsi
+++ b/qcom/kalamap-rb5-gen2.dtsi
@@ -692,11 +692,16 @@
 	};
 };
 
+&pcie0_msi {
+	status = "ok";
+};
+
 &pcie0 {
 	qcom,boot-option = <0x2>;
 
 	pcie-i2c-phandle = <&qupv3_hub_i2c4>;
 	vreg-3p3-supply = <&usb_hub_rest_vreg>;
+	msi-parent = <&pcie0_msi>;
 
 	 qcom,pcie-phy-ver = <102>;
 			qcom,phy-sequence = <0x0240 0x03 0x0
