--- a/qcom/monaco.dtsi
+++ b/qcom/monaco.dtsi
@@ -23,6 +23,7 @@
 		mmc0 = &sdhc_1; /*SDC1 eMMC slot*/
 		serial0 = &qupv3_se6_2uart;
 		hsuart0 = &qupv3_se5_4uart;
+		i2c1 = &qupv3_se1_i2c;
 	};
 
 	firmware: firmware {};
