ARM: dts: qcom: Enable aop-set-ddr-freq for sa8255
Add node aop-set-ddr-freq to set ddr frequency for sa8255
target from script in userspace.

Change-Id: I4a996443fe4a0c104228bd8fe45294e0f918ed41

--- a/qcom/lemans.dtsi
+++ b/qcom/lemans.dtsi
@@ -565,6 +565,12 @@
 		};
 	};
 
+	aop-set-ddr-freq {
+		compatible = "qcom,aop-set-ddr-freq";
+		mboxes = <&qmp_aop 0>;
+		mbox-names = "aop";
+	};
+
 	psci {
 		compatible = "arm,psci-1.0";
 		method = "smc";
