ARM: dts: msm: Add QRC reset pin on RB5-Gen2
Add reset pin number to fit MCB HW.

Change-Id: I763259a087f80eedf7d2df21e0717357a919181a

--- a/qcom/kalamap-rb5-gen2.dtsi
+++ b/qcom/kalamap-rb5-gen2.dtsi
@@ -467,6 +467,15 @@
 	};
 };
 
+&qupv3_se4_4uart {
+	status = "ok";
+	qrc:qrc@100 {
+		compatible = "qcom,qrc-uart";
+		status = "ok";
+		qcom,qrc-reset-gpio = <&tlmm 168 0>;
+	};
+};
+
 &usb_qmp_dp_phy {
 	pinctrl-names = "unused";
 
