ARM: dts: msm: remove gpio 32, 33, 36-39 from base dt qcom,gpios-reserved list
gpio32, 33 qupv3_se1_i2c for sx1508q
gpio36 - 39 qupv3_se2_spi for tdk temp sensor.

Change-Id: Ib26b003f12ea3420befc037bed6c39629f3709d3

--- a/qcom/kalamap-rb5-gen2.dtsi
+++ b/qcom/kalamap-rb5-gen2.dtsi
@@ -30,6 +30,10 @@
 };
 
 &tlmm {
+	/* 32 33 qupv3_se1_i2c for sx1508q */
+	/* 36 - 39 qupv3_se2_spi for tdk temp sensor */
+	qcom,gpios-reserved = <34 35>;
+
 	pice0_usb_power_1p05_default: pice0_usb_power_1p05_default {
 		mux {
 			pins = "gpio179";
