--- a/qcom/qcs405.dtsi
+++ b/qcom/qcs405.dtsi
@@ -1089,7 +1089,7 @@
 		interconnect-names = "data_path";
 		interconnects = <&bimc MASTER_AMPSS_M0 &pc_noc SLAVE_PRNG>;
 		clocks = <&gcc GCC_PRNG_AHB_CLK>;
-		clock-names = "iface_clk";
+		clock-names = "km_clk_src";
 	};
 
 	qcom_tzlog: tz-log@8600720 {
